--- a/public/common/place/place__arrow.css
+++ b/public/common/place/place__arrow.css
@@ -1,6 +1,7 @@
-.place__arrow
+button.place__arrow
 {
     height: 42px;
     font-size: 36px;
     margin-left: -6px;
+    background: transparent;
 }
