--- a/views/partials/placeCreator.hbs
+++ b/views/partials/placeCreator.hbs
@@ -1,4 +1,4 @@
 <div class="place-creator one-line">
-    <input class="place-creator__ipt" type="text" placeholder="Название места">
-    <button class="place-creator__btn" type="button">Создать место</button>
+    <input class="place-creator__input input_default" type="text" placeholder="Название места">
+    <button class="place-creator__button" type="button">Создать место</button>
 </div>
