--- a/public/common/index.css
+++ b/public/common/index.css
@@ -1,36 +1,12 @@
-@import './input.css';
-@import './button.css';
-
-@import './one-line/one-line.css';
-
-@import './btn/btn-place.css';
-@import './btn/btn-hidden.css';
-
 @import './main/main.css';
-
-@import './search/search.css';
-@import './search/search__ipt.css';
-@import './search/search__btn/search__btn.css';
-
-@import './place-creator/place-creator.css';
-@import './place-creator/place-creator__ipt.css';
-@import './place-creator/place-creator__btn/place-creator__btn.css';
-
-@import './places/places.css';
-@import './places-menu/places-menu.css';
-@import './places-menu/menu__title.css';
-@import './places-menu/menu__filters.css';
-@import './places-menu/menu__filter.css';
-
-@import './place/place.css';
-@import './place/place__visit.css';
-@import './place/place__arrow.css';
-@import './place/place__name.css';
-@import './place/place__delete.css';
-@import './place/place__edit.css';
-
-@import './place-edit/place-edit__ipt.css';
-@import './place-edit/place-edit__confirm.css';
-@import './place-edit/place-edit__cancel.css';
-
 @import './footer/footer.css';
+@import './places/places.css';
+@import './one-line/one-line.css';
+@import './input/input_default.css';
+
+@import './place/index.css';
+@import './button/index.css';
+@import './search/index.css';
+@import './place-edit/index.css';
+@import './places-menu/index.css';
+@import './place-creator/index.css';
