--- a/views/partials/placesMenu.hbs
+++ b/views/partials/placesMenu.hbs
@@ -1,9 +1,9 @@
-<input type="radio" name="place-filter" id="f1" class="menu__filter" checked>
-<input type="radio" name="place-filter" id="f2" class="menu__filter">
-<input type="radio" name="place-filter" id="f3" class="menu__filter">
+<input class="menu__filter input_default" type="radio" name="place-filter" id="f1" checked>
+<input class="menu__filter input_default" type="radio" name="place-filter" id="f2">
+<input class="menu__filter input_default" type="radio" name="place-filter" id="f3">
 <div class="places-menu">
     <h2 class="menu__title">Места</h2>
-    <button class="place__delete btn-place" type="button" name="cleaner"></button>
+    <button class="button_default place__delete" type="button" name="cleaner"></button>
     <div class="menu__filters">
         <label for="f1" class="menu__filter">Все</label>
         <label for="f2" class="menu__filter">Посетить</label>
