--- a/views/partials/search.hbs
+++ b/views/partials/search.hbs
@@ -1,4 +1,4 @@
 <div class="search one-line">
-    <button class="search__btn btn-place" type="button"></button>
-    <input class="search__ipt" type="text" placeholder="Поиск">
+    <button class="button_default search__button" type="button"></button>
+    <input class="input_default search__input" type="text" placeholder="Поиск">
 </div>
