--- a/views/components/place/place.hbs
+++ b/views/components/place/place.hbs
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="place__edit">
+<div class="place__edit hidden">
     <input type="text" class="place__edit__name"/>
     <span class="place__edit__save"><i class="fa fa-check"></i></span>
     <span class="place__edit__cancel"><i class="fa fa-times"></i></span>
