--- a/public/index.css
+++ b/public/index.css
@@ -1,61 +1,261 @@
+@font-face {
+    font-family: Lugatype;
+    src: url(Lugatype.otf);
+}
+
+@font-face {
+    font-family: Cond;
+    src: url(Cond.otf);
+}
+
 main,
-footer
-{
+footer {
     width: 40%;
     margin: auto;
-    border: 1px black solid;
+    border: 1px #686868 solid;
+    box-shadow: #a4a4a4 5px 2px 10px 1px;
+    padding: 5px;
+    background: radial-gradient(circle farthest-corner at 80px 60px, #d0c8c1, #45434f);
 }
 
-footer
-{
+main {
+    border-radius: 15px 15px 0 0;
+}
+
+footer {
     display: flex;
     justify-content: space-around;
+    font: 20px Lugatype, sans-serif;
 }
 
-.search
-{
+.search {
     display: flex;
     justify-content: center;
 }
 
-.search__input
-{
+.search__input {
     width: 60%;
     margin: 10px 0 30px 0;
 }
 
-.create
-{
+.search__input,
+.create__input,
+.place__name-input {
+    padding: 5px;
+    font: 20px Lugatype, serif;;
+    border: 5px solid rgba(255, 255, 255, .5);
+    background: rgba(255, 255, 255, .5);
+}
+
+.place__name-input {
+    padding: 0;
+    width: 200px;
+}
+
+.create {
     display: flex;
     justify-content: space-around;
 }
 
-.create__input
-{
+.edit-cancel-button,
+.edit-accept-button,
+.place__name-input {
+    display: none;
+}
+
+.create__button {
+    padding: 10px 10px;
+    margin: 5px 10px;
+    position: relative;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, .4);
+    background: none;
+    font-family: 'Montserrat', serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.create__button:before,
+.create__button:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    box-sizing: border-box;
+}
+
+.create__button:before {
+    bottom: 0;
+    left: 0;
+    border-left: 1px solid white;
+    border-top: 1px solid white;
+    transition: opacity 0s ease .8s, width .2s ease .4s, height .2s ease .6s;
+}
+
+.create__button:after {
+    top: 0;
+    right: 0;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    transition: 0s ease opacity .4s, width .2s ease, height .2s ease .2s;
+}
+
+.create__button:hover:before,
+.create__button:hover:after {
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+}
+
+.create__button:hover:before {
+    transition: 0s ease opacity 0s, height .2s ease, width .2s ease .2s;
+}
+
+.create__button:hover:after {
+    transition: 0s ease opacity .4s, height .2s ease .4s, width .2s ease .6s;
+}
+
+.create__button:hover {
+    background: rgba(255, 255, 255, .2);
+}
+
+.create__input {
     width: 60%;
 }
 
-.filter
-{
+.filter {
     margin: 10px 0;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
-.filter__buttons
-{
+.filter__title {
+    font: 35px Cond, sans-serif;
+}
+
+.filter__trash {
+    background: url(garbage-24.png) no-repeat center center;
+    height: 35px;
+    width: 35px;
+    border-radius: 5px;
+    box-shadow: 0 0 0 1px #7f7f7f inset;
+}
+
+.visit-buttons {
     display: flex;
     height: 35px;
 }
 
-.places
-{
+.places {
     display: flex;
     flex-direction: column;
 }
 
-.place
-{
+.place {
     display: flex;
     justify-content: space-around;
+    margin: 3px 0;
+}
+
+.place__name {
+    width: 200px;
+    font: 20px Lugatype, serif;
+}
+
+.place button {
+    height: 25px;
+    width: 25px;
+    border-radius: 5px;
+    box-shadow: 0 0 0 1px #7f7f7f;
+}
+
+.place button:hover,
+.filter__trash:hover {
+    box-shadow: 0 0 0 1px #bbbbbb, 0 1px 1px #c2c2c2;
+}
+
+.place button:active,
+.filter__trash:active {
+    box-shadow: 0 0 0 1px #bbb, 0 1px 3px rgba(0, 0, 0, .5), 0 1px 2px #fff;
+}
+
+.place__edit-button {
+    background: url(settings.png) no-repeat center center;
+}
+
+.place__delete-button {
+    background: url(garbage-16.png) no-repeat center center;
+}
+
+.edit-cancel-button {
+    background: url(forbidden.png) no-repeat center center;
+}
+
+.edit-accept-button {
+    background: url(checking.png) no-repeat center center;
+}
+
+.place-move-buttons__up {
+    background: url(up-arrow.png) no-repeat center center;
+}
+
+.place-move-buttons__down {
+    background: url(down-arrow.png) no-repeat center center;
+}
+
+.visit-buttons__all,
+.visit-buttons__to-visit,
+.visit-buttons__visited {
+    font-size: 90%;
+    font-weight: 700;
+    color: rgb(209, 209, 217);
+    text-decoration: none;
+    text-shadow: 0 -1px 2px rgba(0, 0, 0, .2);
+    padding: 3px 6px;
+    border-radius: 3px;
+    background: linear-gradient(rgb(110, 112, 120), rgb(81, 81, 86)) rgb(110, 112, 120);
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5),
+    0 0 1px 1px rgba(0, 0, 0, 0.2);
+    margin: 2px;
+}
+
+.visit-buttons__all:hover:not(:active),
+.visit-buttons__to-visit:hover:not(:active),
+.visit-buttons__visited:hover:not(:active) {
+    background: linear-gradient(rgb(126, 126, 134), rgb(70, 71, 76)) rgb(126, 126, 134);
+}
+
+.visit-buttons__all:active,
+.visit-buttons__to-visit:active,
+.visit-buttons__visited:active {
+    background: linear-gradient(rgb(76, 77, 82), rgb(56, 57, 62)) rgb(76, 77, 82);
+    box-shadow: 0 0 1px rgba(0, 0, 0, .5) inset,
+    0 2px 3px rgba(0, 0, 0, .5) inset,
+    0 1px 1px rgba(255, 255, 255, .1);
+}
+
+.place-visited {
+    display: none;
+}
+
+.place-visited-custom {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    border: 2px solid #e5e5e5;
+    border-radius: 3px;
+}
+
+.place-visited:checked + .place-visited-custom::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    bottom: 2px;
+    left: 2px;
+    background: #000000;
+    border-radius: 2px;
 }
