--- a/views/partials/places.hbs
+++ b/views/partials/places.hbs
@@ -3,9 +3,9 @@
         <h2 class="places__title">Места</h2>
         <i class="far fa-trash-alt places__clear clickable"></i>
         <div class="filter">
-            <a class="filter__button filter__button--rounded-left filter__button--active  clickable" data-filter="all">Все</a>
+            <a class="filter__button filter__button_rounded-left filter__button_active  clickable" data-filter="all">Все</a>
             <a class="filter__button  clickable" data-filter="visit">Посетить</a>
-            <a class="filter__button filter__button--rounded-right  clickable" data-filter="visited">Посещённые</a>
+            <a class="filter__button filter__button_rounded-right  clickable" data-filter="visited">Посещённые</a>
         </div>
     </div>
     <hr>
