--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{{meta.title}}</title>
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+        <script defer src="/js/request.js"></script>
         <script defer src="/js/places.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="/css/styles.css">
