createElement from html

--- a/public/index.css
+++ b/public/index.css
@@ -37,7 +37,7 @@
     margin-left: 1px;
 }
 
-.search-input:valid + .search-input-placeholder {
+.search-input:valid + .search-input-placeholder, .node-list {
     display: none;
 }
 
