--- a/public/css/2_new-place.css
+++ b/public/css/2_new-place.css
@@ -40,7 +40,7 @@
 .new-place__name:hover,
 .new-place__description:hover
 {
-    border: 3px solid #6af3;
+    border: 3px solid #5553;
     border-bottom: 3px solid var(--border-color);
     border-radius: 3px;
     transition: .25s;
@@ -63,7 +63,7 @@
     width: 80%;
     border: 1.5px solid var(--border-color);
     border-radius: 24px;
-    background: radial-gradient(farthest-side at 10px 10px, #fff3, #60a0ff33);
+    background: radial-gradient(farthest-side at 10px 10px, #fff5, #5555);
     background-color: transparent;
     margin: -3px 20px;
     color: var(--text-color);
