--- a/public/css/3_control-panel.css
+++ b/public/css/3_control-panel.css
@@ -1,25 +1,30 @@
 .control-panel
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 3fr;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 10px;
+    position: sticky;
+    top: 20px;
+    z-index: 11;
     margin: var(--standard-margin-from-hr) var(--margin-for-content);
 }
 
 .control-panel__title
 {
     font-size: 170%;
+    text-align: center;
     position: relative;
-    top: 4px;
+    top: 6px;
 }
 
 .control-panel__delete
 {
-    /* margin-left: calc(((var(--body-width) - 2*var(--margin-for-content)) / 5 - 64px) / 2); */
     margin-left: calc((88px - 31px)/2);
     border: 1px solid rgba(0, 0, 0, 0);
     box-sizing: border-box;
     position: relative;
-    top: 2px;
+    top: 4px;
     outline: none;
 }
 
@@ -38,18 +43,20 @@
 
 .control-panel__sorting
 {
-    justify-content: flex-start;
+    justify-content: space-around;
     display: flex;
     align-items: flex-end;
 }
 
-.control-panel__sorting_input
+.control-panel__sorting-input_abc,
+.control-panel__sorting-input_date
 {
     position: absolute;
     opacity: 0;
 }
 
-.control-panel__sorting_type
+.control-panel__sorting_type_abc,
+.control-panel__sorting_type_date
 {
     width: 31px;
     height: 31px;
@@ -61,7 +68,7 @@
     transition: .3s;
 }
 
-.control-panel__sorting_image-1
+.control-panel__sorting_type_abc > .control-panel__sorting-icon
 {
     position: relative;
     top: 12%;
@@ -69,28 +76,29 @@
     width: 76%;
 }
 
-.control-panel__sorting_image-2
+.control-panel__sorting_type_date > .control-panel__sorting-icon
 {
     position: relative;
     top: -2px;
     left: -1.5px;
 }
 
-.control-panel__sorting_input:hover + .control-panel__sorting_type:first-of-type
+.control-panel__sorting_type_abc:hover
 {
     box-shadow: 0 0 2px 2px var(--border-color);
     transform: translateX(-5px) skewY(-10deg) scale(1.2);
     transition: .5s;
 }
 
-.control-panel__sorting_input:hover + .control-panel__sorting_type:last-of-type
+.control-panel__sorting_type_date:hover
 {
     box-shadow: 0 0 2px 2px var(--border-color);
     transform: translateX(5px) skewY(10deg) scale(1.2);
     transition: .5s;
 }
 
-.control-panel__sorting_input:focus + .control-panel__sorting_type
+.control-panel__sorting-input_abc:focus + .control-panel__sorting_type_abc,
+.control-panel__sorting-input_date:focus + .control-panel__sorting_type_date
 {
     box-shadow: 0 0 3px 3px var(--border-color);
     animation: jump .7s cubic-bezier(0.175, 0.885, 0.32, 1.275) .3s infinite;
@@ -98,8 +106,8 @@
 
 .control-panel__view-filter
 {
+    grid-area: 2 / 1 / 3 / end;
     display: inline-flex;
-    justify-content: flex-end;
     flex-wrap: nowrap;
     --border-radius: 20px;
     text-align: center;
@@ -110,7 +118,7 @@
     border: 1.5px solid var(--border-color);
     width: 100%;
     font-size: 17px;
-    margin-top: calc((32px - var(--global-font-size))/2);
+    /* margin-top: calc((32px - var(--global-font-size))/2); */
     cursor: pointer;
     padding-top: 8px;
 }
@@ -142,19 +150,19 @@
 
 .control-panel__view-filter_input + .control-panel__view-filter_type
 {
-    background: linear-gradient(90deg, #6af5, #6af0, #6af5);
+    background: linear-gradient(90deg, #5555, #6af0, #5555);
 }
 
 .control-panel__view-filter > .control-panel__view-filter_type:first-of-type
 {
     border-radius: var(--border-radius) 0 0 var(--border-radius);
     border-right: none;
-    background: linear-gradient(90deg, #60a0ffbb, #6af5);
+    background: linear-gradient(90deg, #555b, #5555);
 }
 
 .control-panel__view-filter > .control-panel__view-filter_type:last-of-type
 {
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
     border-left: none;
-    background: linear-gradient(90deg,  #6af5, #60a0ffbb);
+    background: linear-gradient(90deg,  #5555, #555b);
 }
