--- a/public/css/4_list.css
+++ b/public/css/4_list.css
@@ -7,6 +7,7 @@
 {
     border-bottom: 1px solid var(--border-color);
     margin: var(--standard-margin-from-hr) 0;
+    width: 100%;
     display: grid;
     grid-template-columns: 10fr 1fr 2fr;
     grid-template-rows: 40px 55px auto;
