--- a/public/css/places.css
+++ b/public/css/places.css
@@ -11,6 +11,14 @@
     z-index: 100;
 }
 
+.list__item_block
+{
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    z-index: 100;
+}
+
 .list__items
 {
     margin: 10px 10px 10px 0;
@@ -54,16 +62,28 @@
     transition: .2s;
 }
 
+
 .list__control-place
 {
     display: grid;
     grid-template-columns: 40px 40px auto 20px 30px 30px;
 }
 
+.list__control-place_edit
+{
+    display: grid;
+    grid-template-columns: 40px 40px auto 40px 40px 20px 30px 30px;
+}
 .list__item-save-button,
 .list__item-cancel-button
 {
     display: none;
+}
+
+.list__item-save-button_block,
+.list__item-cancel-button_block
+{
+    display: block;
 }
 
 .list__item_moveup,
@@ -109,7 +129,8 @@
     display: none;
 }
 
-.list__item_description-input
+.list__item_description-input,
+.list__item_description-input_block
 {
     font: 18px 'Amatic SC';
     margin: 10px 0;
@@ -121,6 +142,11 @@
     width: 380px;
 }
 
+.list__item_description-input_block
+{
+    display: block;
+}
+
 
 
 .list__item_description-div
@@ -128,5 +154,20 @@
     font: 18px 'Amatic SC';
     margin: 10px 0;
     display: block;
+}
+
+.none
+{
+    display: none;
+}
+
+.list__item_name_none
+{
+    text-decoration: none;
+}
+
+.list__item_name_line
+{
+    text-decoration: line-through;
 }
 
