--- a/public/index.css
+++ b/public/index.css
@@ -29,22 +29,22 @@
 .header__search:focus {
   box-shadow: 0 2px 0 0 #2ea4ed;
 }
-.create {
+.create-form {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
 }
-.create__input {
+.create-form__input {
   width: 75%;
   border: none;
   box-shadow: 0 1px 0 0 #ededed;
   outline: none;
   transition: 0.2s box-shadow;
 }
-.create__input:focus {
+.create-form__input:focus {
   box-shadow: 0 2px 0 0 #2ea4ed;
 }
-.create__btn {
+.create-form__btn {
   width: 20%;
   max-width: 100px;
   padding: 5px 15px;
@@ -56,7 +56,7 @@
   cursor: pointer;
   transition: background-color 0.5s;
 }
-.create__btn:hover {
+.create-form__btn:hover {
   background: #128bd6;
 }
 .places__header {
@@ -79,15 +79,14 @@
   border: none;
   align-self: center;
   outline: none;
-  background: none;
+  background: url("media/delete.svg") no-repeat;
+  background-size: contain;
   cursor: pointer;
+  border-radius: 3px;
+  transition: background-color 0.2s;
 }
-.places__delete .st0 {
-  fill: #2ea4ed;
-  transition: fill 0.5s;
-}
-.places__delete :hover .st0 {
-  fill: #f00;
+.places__delete:hover {
+  background-color: #e7e7e7;
 }
 .places__sort-options {
   display: flex;
