--- a/views/partials/placesHeader.hbs
+++ b/views/partials/placesHeader.hbs
@@ -5,12 +5,12 @@
     <input class="main-places-header__radio" type="radio" name="type" id="visit">
     <input class="main-places-header__radio" type="radio" name="type" id="notvisit">
     <label for="all" onclick="show('all')">
-        <p class ="main-places-header__button button_left">Все</p>
+        <p class ="main-places-header__button button_left button_first button_red">Все</p>
     </label>
     <label for="visit" onclick="show('toVisit')">
-        <p class ="main-places-header__button">Посетить</p>
+        <p class ="main-places-header__button button_second button_blue">Посетить</p>
     </label>
     <label for="notvisit" onclick="show('visited')">
-        <p class ="main-places-header__button button_right">Посещенные</p>
+        <p class ="main-places-header__button button_right button_third button_blue">Посещенные</p>
     </label>
 </div>
