--- a/public/index.css
+++ b/public/index.css
@@ -96,12 +96,58 @@
 }
 
 .main {
+    position: relative;
     width: 400px;
     border: 1px solid black;
 }
 
+.loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.4;
+    z-index: 1;
+    top: 0;
+}
 
 .footer {
     margin: 3px;
     text-align: right;
+}
+
+.btn {
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.btn_edit {
+    background-image: url('/img/edit-btn.svg')
+}
+
+.btn_delete {
+    background-image: url('/img/delete-btn.svg')
+}
+
+.btn_save {
+    background-image: url('/img/save-btn.svg')
+}
+
+.btn_undo {
+    background-image: url('/img/undo-btn.svg')
+}
+
+.btn_search {
+    background-image: url('/img/search-btn.svg')
+}
+
+.btn_add {
+    background-image: url('/img/add-btn.svg')
+}
+
+.control_hide {
+    display: none
 }
