--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,10 +20,10 @@
             <button class='create_button'>Создать</button>
         </article>
         <article class="places">
+            <div class='places_list_header'>Места</div>
             <button class="places_clear">
                 <img src="/static/trash.png">
             </button>
-            <div class='places_list_header'>Места</div>
             <button class="places_all">
                 Все
             </button>
@@ -47,7 +47,6 @@
 </body>
 
 </html>
-
-<script src="scripts/create.js" type="text/javascript"></script>
-<script src="scripts/search.js" type="text/javascript"></script>
-<script src="scripts/places.js" type="text/javascript"></script>
+<script src="scripts/placeApi.js" type="text/javascript"></script>
+<script src="scripts/index.js" type="text/javascript"></script>
+<script src="scripts/placesEvents.js" type="text/javascript"></script>
