--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,6 +47,9 @@
 </body>
 
 </html>
+<script src="scripts/models/place.js" type="text/javascript"></script>
+<script src="scripts/models/searchState.js" type="text/javascript"></script>
 <script src="scripts/placeApi.js" type="text/javascript"></script>
 <script src="scripts/index.js" type="text/javascript"></script>
 <script src="scripts/placesEvents.js" type="text/javascript"></script>
+<script src="scripts/placeEvents.js" type="text/javascript"></script>
