Надо рефакторинг + стили + не editся название place

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,10 +34,7 @@
                 Посещенные
             </button>
             <hr>
-            <ul class='places_list'>
-                Места
-
-            </ul>
+            <ul class='places_list'></ul>
         </article>
     </main>
     <footer class="footer">
