--- a/public/index.css
+++ b/public/index.css
@@ -30,7 +30,7 @@ body {
     margin-top: 2%
 }
 
-.places_list_item_edit{
+.places_list_item_edit {
     margin-left: 2%;
     width: 20px;
     height: 20px;
@@ -39,7 +39,7 @@ body {
     visibility: hidden;
 }
 
-.places_list_item_delete{
+.places_list_item_delete {
     width: 20px;
     height: 20px;
     background-image: url("/static/trash.png");
@@ -48,20 +48,28 @@ body {
 }
 
 .places_list_item:hover > .places_list_item_edit,
-.places_list_item:hover > .places_list_item_delete{
+.places_list_item:hover > .places_list_item_delete {
     visibility: visible;
 }
 
-.places_list_item_name{
+.places_list_item_name {
     display: inline;
     margin-left: 2%;
 }
 
-.places_list_item_shift {
+.places_list_item_shift_up {
     margin-left: 2%;
     width: 20px;
     height: 20px;
     background-image: url("/static/arrow-up.png");
+    background-size: cover; 
+}
+
+.places_list_item_shift_down {
+    margin-left: 2%;
+    width: 20px;
+    height: 20px;
+    background-image: url("/static/arrow-down.png");
     background-size: cover; 
 }
 
@@ -79,6 +87,23 @@ body {
     height: 20px;
     background-image: url("/static/not-visited.png");
     background-size: cover; 
+}
+
+.places_list_item_edit_input {
+    visibility: visible;
+    width: 100px;
+}
+
+.places_list_item_edit_cancel {
+    margin-left: 2%;
+    background-size: cover;
+    visibility: visible;
+}
+
+.places_list_item_edit_ok {
+    margin-left: 2%;
+    background-size: cover;
+    visibility: visible;
 }
 
 .footer {
